# aoc16-haskell

./: README.md  aoc16-haskell.cabal  day20  day3-small  hashes  stack.yaml
app/: Main.hs  Main.hs~
src/: Day1.hs  Day1.hs~  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day18.hs  Day19.hs  Day2.hs  Day2.hs~  Day20.hs  Day3.hs  Day3.hs~  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Lib.hs
