name:                aoc16-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/aoc16-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Day1
                       Day2
                       Day3
                       Day4
                       Day5
                       Day6
                       Day7
                       Day8
                       Day9
                       Day10
                       Day11
                       Day12
                       Day13
                       Day14
                       Day15
                       Day16
                       Day18
                       Day19
                       Day20
  build-depends:       base >= 4.7 && < 5
                     , MissingH
                     , bytestring
                     , containers
                     , dequeue
                     , parallel
                     , parsec
                     , pqueue
                     , split
  default-language:    Haskell2010

executable aoc16-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc16-haskell
  default-language:    Haskell2010

test-suite aoc16-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aoc16-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/aoc16-haskell
